# JobMonitor

./: .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  channels_map.json  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-prod.yml  release.yml
alembic/versions/: cce3ae0cbc82_init.py  e434c0b6ae91_user.py  f7c1d2e3a4b5_add_grade_and_experience_filters.py
app/: main.py
app/application/dto/: resume_dto.py  vacancy_dto.py
app/application/dto/miniapp/: __init__.py  models.py
app/application/ports/: __init__.py  llm_port.py  notification_port.py  observability_port.py  unit_of_work.py
app/application/services/: matcher_service.py  user_service.py  vacancy_service.py
app/bootstrap/: __init__.py  bootstrap.py  shutdown.py
app/core/: config.py  logger.py
app/domain/matching/: entities.py  policy.py
app/domain/shared/: __init__.py  value_objects.py
app/domain/user/: __init__.py  entities.py  repository.py  value_objects.py
app/domain/vacancy/: entities.py  exceptions.py  repository.py
app/infrastructure/: llm.py  llm_runtime.py  sentry.py
app/infrastructure/db/: models.py
app/infrastructure/db/mappers/: user.py  vacancy.py
app/infrastructure/db/uow/: base.py  user_uow.py  (+2 more)
app/infrastructure/extractors/: __init__.py  vacancy_extractor.py
app/infrastructure/observability/: bootstrap.py  metrics.py  service.py
app/infrastructure/parsers/: base.py  factory.py  pdf_parser.py
app/infrastructure/telegram/: telethon_client.py
app/telegram/bot/: commands.py  keyboards.py  search_profile_view.py  settings_menu.py  startup.py  tracking_settings_view.py
app/telegram/miniapp/: app.py  page_context.py  routes.py
app/telegram/scrapper/: channels.py  handlers.py
docs/: CHANNELS.md  INSTALL.md
docs/deploy/: production.md
test/: conftest.py
test/unit/core/: test_logger.py
test/unit/db/: test_mappers.py
tests/: conftest.py
tests/unit/application/: test_matcher_service.py
tests/unit/db/: test_mappers.py
tests/unit/dto/: test_miniapp_models.py
(+25 files in other folders)
