[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = ['^\.venv/']

[tool.logfire]
ignore_no_config = true

[project]
name = "jobmonitor"
version = "0.1.0"
description = "Telegram bot for personalized IT vacancy monitoring, AI parsing, and delivery of relevant offers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.121.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.3",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.63.0",
    "pydantic-settings>=2.13.1",
    "qrcode>=8.2",
    "logfire[fastapi,sqlalchemy,system-metrics]>=4.25.0",
    "sentry-sdk>=2.53.0",
    "sqlalchemy>=2.0.47",
    "telethon>=1.42.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
]
